po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 11:47+0000\n"
+"PO-Revision-Date: 2017-01-25 21:30+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -152,7 +152,7 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Batch Name %1 %2"
-msgstr ""
+msgstr "Ime grupe %1 %2"
 
 #: CRM/Contribute/BAO/Query.php
 msgid ""
@@ -214,7 +214,7 @@ msgstr "Datum završetka periodične donacije"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Failed Recurring Contribution Retry Date"
-msgstr ""
+msgstr "Datum ponovnog pokušaja nakon neuspele periodične donacije"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Campaign is ongoing"
@@ -295,7 +295,7 @@ msgstr "Samo kreditna kartica?"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Monetary"
-msgstr ""
+msgstr "je monetarna vrednost"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Recurring"
@@ -410,7 +410,7 @@ msgstr "Stranica za donacije podeljena?"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Product Option"
-msgstr ""
+msgstr "Opcija proizvoda"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Fulfilled Date"
@@ -451,7 +451,7 @@ msgstr "Broj neuspelih pokušaja"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Retry Failed Attempt Date"
-msgstr ""
+msgstr "Datum pokušaja nakon neuspeha"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Send email Receipt?"
@@ -507,19 +507,19 @@ msgstr "Da li je premijum aktivan?"
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "Title for Premiums section"
-msgstr ""
+msgstr "Naslov sekcije sa premijumima"
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "Premium Introductory Text"
-msgstr ""
+msgstr "Uvodni tekst za premijume"
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "Premium Contact Email"
-msgstr ""
+msgstr "Email kontakta za premijum"
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "Premiums Contact Phone"
-msgstr ""
+msgstr "Telefon kontakta za premijum"
 
 #: CRM/Contribute/DAO/Premium.php
 msgid "Display Minimum Contribution?"
@@ -568,7 +568,7 @@ msgstr "Url Logotipa"
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Button Title"
-msgstr ""
+msgstr "Naslov dugmeta"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Homepage"
@@ -694,7 +694,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Please enter a valid monetary value for Fee Amount."
-msgstr ""
+msgstr "Unesite važeću monetarnu vrednost za iznos kotizacije."
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/AdditionalPayment.php
@@ -742,7 +742,7 @@ msgstr "Plaćanje kreditnom karticom nije namenjeno za refundiranje"
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid "Direct Debit Information"
-msgstr ""
+msgstr "Informacija o direktnom debitu"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Amount"
@@ -783,7 +783,7 @@ msgstr "Priznanica je poslata donatoru emailom."
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: CRM/Contribute/Form/Contribution.php
 msgid "Submit Credit Card Payment by: %1"
-msgstr ""
+msgstr "Dostavi uplatu kreditnom karticom od: %1"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "notification"
@@ -793,7 +793,7 @@ msgstr "notifikacija"
 msgid ""
 "The auto renewal option for this membership looks to have been cancelled "
 "already."
-msgstr ""
+msgstr "Opcija automatskog osveženja za ovo članstvo je već otkazana."
 
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "The recurring contribution looks to have been cancelled already."
@@ -848,7 +848,7 @@ msgstr "Anonimno"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Mixed profile not allowed for on behalf of registration/sign up."
-msgstr ""
+msgstr "Mešoviti profil nije dozvoljen pri registraciji/prijavi u tuđe ime."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid ""
@@ -1154,7 +1154,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/AddProduct.php
 msgid "Select the Product"
-msgstr ""
+msgstr "Izaberite proizvod"
 
 #: CRM/Contribute/Form/ContributionPage/AddProduct.php
 msgid "Please enter integer value for weight"
@@ -1162,7 +1162,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/AddProduct.php
 msgid "Add Premium to Contribution Page"
-msgstr ""
+msgstr "Dodaj premijum na stranicu za doniranje"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Allow other amounts"
@@ -1178,7 +1178,7 @@ msgstr "Sekcija za iznose donacije uključena"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Execute real-time monetary transactions"
-msgstr ""
+msgstr "Izvrši monetarne transakcije"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Supported recurring units"
@@ -1294,7 +1294,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Google Checkout does not support recurring intervals"
-msgstr ""
+msgstr "Google Checkout ne podržava intervale periodičnih donacija"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid ""
@@ -1341,7 +1341,7 @@ msgstr "Stranica za doniranje '%1' je obrisana."
 
 #: CRM/Contribute/Form/ContributionPage/Premium.php
 msgid "Premiums Section Enabled?"
-msgstr ""
+msgstr "Sekcija sa premijumima je uključena?"
 
 #: CRM/Contribute/Form/ContributionPage/Premium.php
 msgid "Contact Phone"
@@ -1361,19 +1361,19 @@ msgstr "Bez oznake za zahvalnicu"
 
 #: CRM/Contribute/Form/ContributionPage/Premium.php
 msgid "Before Premiums"
-msgstr ""
+msgstr "Pre premijuma"
 
 #: CRM/Contribute/Form/ContributionPage/Premium.php
 msgid "After Premiums"
-msgstr ""
+msgstr "Posle premijuma"
 
 #: CRM/Contribute/Form/ContributionPage/Premium.php
 msgid "No Thank-you Option"
-msgstr ""
+msgstr "Bez opcije zahvalnice"
 
 #: CRM/Contribute/Form/ContributionPage/Premium.php
 msgid "No Thank-you Label is a required field."
-msgstr ""
+msgstr "Oznaka za Bez zahvalnice je obavezno polje."
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 #: CRM/Contribute/Page/ContributionPage.php
@@ -1385,7 +1385,7 @@ msgstr "Naslov i podešavanja"
 msgid ""
 "Allow individuals to contribute and / or signup for membership on behalf of "
 "an organization?"
-msgstr ""
+msgstr "Dozvolite pojedincima da doniraju ili / i prijave za članstvo u ime organizacije?"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Organization Profile"
@@ -1393,7 +1393,7 @@ msgstr "Profil organizacije"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "On behalf of Label"
-msgstr ""
+msgstr "Oznaka za U ime"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid "Use a confirmation page?"
@@ -1445,7 +1445,7 @@ msgstr "Izaberite profil koji će prikupljati informacije o organizaciji na ovoj
 msgid ""
 "Profile does not contain the minimum required fields for an On Behalf Of "
 "Organization"
-msgstr ""
+msgstr "Profil ne sadrži minimum neophodnih polja za U ime organizacije profil"
 
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 msgid ""
@@ -1462,7 +1462,7 @@ msgstr "Vidžeti"
 #: templates/CRM/Contribute/Form/ContributionPage/Tab.hlp
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid "Thank-you and Receipting"
-msgstr ""
+msgstr "Zahvalnice i priznanice"
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "Email Receipt to Contributor?"
@@ -1470,29 +1470,29 @@ msgstr "Pošalji priznanicu emailom donatoru?"
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "Receipt From Name"
-msgstr ""
+msgstr "Priznanica od ime"
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "Receipt From Email"
-msgstr ""
+msgstr "Priznanica od email"
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "CC Receipt To"
-msgstr ""
+msgstr "CC priznanice za"
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "BCC Receipt To"
-msgstr ""
+msgstr "BCC priznanice za"
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid ""
 "A valid Receipt From Email address must be specified if Email Receipt to "
 "Contributor is enabled"
-msgstr ""
+msgstr "Važeća email adresa za Priznanica od polje mora biti unešena ukoliko je dostavljanje priznanice emailom uključenom."
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "Thanks and Receipt"
-msgstr ""
+msgstr "Zahvalnica i priznanica"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "URL to Logo Image"
@@ -1544,7 +1544,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About is a required field."
-msgstr ""
+msgstr "O nama je obavezno polje."
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Widget Settings"
@@ -1584,7 +1584,7 @@ msgstr "Postavi sa mog kompjutera"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Display image and thumbnail from these locations on the web:"
-msgstr ""
+msgstr "Prikaži sliku i sličicu sa ovih lokacija na internetu:"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Use default image"
@@ -1608,29 +1608,29 @@ msgstr "Thumbnail URL"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Image File Name"
-msgstr ""
+msgstr "Ime fajla sa slikom"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 #: templates/CRM/Contribute/Page/ManagePremiums.tpl
 #: templates/CRM/Contribute/Page/Premium.tpl
 msgid "Market Value"
-msgstr ""
+msgstr "Tržišna vrednost"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please enter the Market Value for this product."
-msgstr ""
+msgstr "Unesite tržišnu vrednost za ovaj proizvod."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Actual Cost of Product"
-msgstr ""
+msgstr "Stvarna cena proizvoda"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please enter the Actual Cost of Product."
-msgstr ""
+msgstr "Unesite stvarnu cenu proizvoda"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please enter a monetary value for the Minimum Contribution Amount."
-msgstr ""
+msgstr "Unesite monetarnu vrednost za minimalni iznos donacije."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Image URL is Required"
@@ -1638,40 +1638,40 @@ msgstr "URL slike je obavezan"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Thumbnail URL is Required"
-msgstr ""
+msgstr "URL sličice je obavezan"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Financial Type is required for product having cost."
-msgstr ""
+msgstr "Finansijski tip je obavezan za proizvode koji imaju cenu"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please select the Period Type for this subscription or service."
-msgstr ""
+msgstr "Unesite tip perioda za ovu pretplatu ili uslugu."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid ""
 "Please enter a Fixed Period Start Day for this subscription or service."
-msgstr ""
+msgstr "Unesite fiksni period početka za ovu pretplatu ili uslugu."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please enter the Duration Interval for this subscription or service."
-msgstr ""
+msgstr "Unesite interval trajanja za ovu pretplatu ili uslugu."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please enter the Duration Unit for this subscription or service."
-msgstr ""
+msgstr "Unesite jedinicu trajanja za ovu pretplatu ili uslugu."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please enter the Frequency Unit for this subscription or service."
-msgstr ""
+msgstr "Unesite jedinicu učestalosti za ovu pretplatu ili uslugu."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Please enter the Frequency Interval for this subscription or service."
-msgstr ""
+msgstr "Unesite interval učestalosti za ovu pretplatu ili uslugu."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Selected Premium Product type has been deleted."
-msgstr ""
+msgstr "Odabrani tim premijum proizvoda je obrisan."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid ""
@@ -1725,7 +1725,7 @@ msgstr "Izaberite kontakt tipa %1"
 
 #: CRM/Contribute/Form/Task/Batch.php
 msgid "Batch Update for Contributions"
-msgstr ""
+msgstr "Grupno ažuriranje za donacije"
 
 #: CRM/Contribute/Form/Task/Batch.php
 msgid "Update Contribution(s)"
@@ -1749,7 +1749,7 @@ msgstr[2] "%count donacija obrisano."
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid ""
 "Please select only contributions with Completed, Pending, Refunded status."
-msgstr ""
+msgstr "Izaberite samo donacije čiji je status završen, nerešen, refundiran."
 
 #: CRM/Contribute/Form/Task/Invoice.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -1766,18 +1766,18 @@ msgstr "PDF profaktura"
 
 #: CRM/Contribute/Form/Task/Invoice.php CRM/Contribute/Form/Task/PDF.php
 msgid "Selection required"
-msgstr ""
+msgstr "Selekcija neophodna"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "From Email Address is required"
-msgstr ""
+msgstr "OD email adresa je obavezna"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid ""
 "If you would like to add personal message to email please add it here. (If "
 "sending to more then one receipient the same message will be sent to each "
 "contact.)"
-msgstr ""
+msgstr "Ukoliko želite da dodate vašu ličnu poruku ovom emailu možete je dodati ovde. (Ukoliko će ovu poruku dobiti više primaoca, svi kontakti će dobiti istu poruuku.)"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Process Invoice(s)"
@@ -1811,7 +1811,7 @@ msgstr "PDF priznanice"
 
 #: CRM/Contribute/Form/Task/PDF.php CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Update receipt dates for these contributions"
-msgstr ""
+msgstr "Ažuriraj datume na priznanicama za ove donacije"
 
 #: CRM/Contribute/Form/Task/PDF.php
 msgid "Override privacy setting? (Do no email / Do not mail)"
@@ -1823,11 +1823,11 @@ msgstr "Obradi priznanicu (priznanice)"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Thank-you Letter Options"
-msgstr ""
+msgstr "Opcije za pismo zahvalnice"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Update thank-you dates for these contributions"
-msgstr ""
+msgstr "Ažuriraj datume na zahvalnicama za ove donacije"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "- no grouping -"
@@ -1885,7 +1885,7 @@ msgstr "Opcije za štampanje i email"
 
 #: CRM/Contribute/Form/Task/PDFLetter.php
 msgid "Make Thank-you Letters"
-msgstr ""
+msgstr "Napravi pisma zahvalnice"
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid ""
@@ -1908,7 +1908,7 @@ msgstr "Datum zahvalnice je ažururan za %1 donacija."
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Thank you for your contribution/s"
-msgstr ""
+msgstr "Hvala na vašoj donaciji/donacijama"
 
 #: CRM/Contribute/Form/Task/PDFLetterCommon.php
 msgid "Please see attached"
@@ -1916,14 +1916,14 @@ msgstr "Pogledajte u prilogu"
 
 #: CRM/Contribute/Form/Task/PickProfile.php CRM/Contribute/Task.php
 msgid "Batch Update Contributions Via Profile"
-msgstr ""
+msgstr "Grupno ažuriranje donacija preko profila"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid ""
 "The maximum number of contributions you can select for Batch Update is %1. "
 "You have selected %2. Please select fewer contributions from your search "
 "results and try again."
-msgstr ""
+msgstr "Maksimalan broj donacija koje možete odabrati za serijsko ažuriranje je %1. Vi ste izabrali %2. Molimo vas da izaberete manje donacija iz rezultata pretrage i pokušate ponovo."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid ""
