po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-24 11:49+0000\n"
+"PO-Revision-Date: 2017-01-25 06:27+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -422,7 +422,7 @@ msgstr "Snimi"
 msgid ""
 "The %1 role was assigned one or more permissions that may prove dangerous "
 "for users of that role to have. Please reconsider assigning %2 to them."
-msgstr ""
+msgstr "Ulozi %1 je dodeljena jedna ili više dozvola koje mogu biti nebezbedne za korisnike kojima je ta uloga dodeljena. Razmotrite dodeljivanje uloge %2 ovim korisnicima."
 
 #: CRM/ACL/Form/WordPress/Permissions.php
 msgid "Unsafe Permission Settings"
@@ -1013,13 +1013,13 @@ msgstr "Završeno"
 msgid ""
 "Are you sure? This is a COMPLETED activity with the DATE in the FUTURE. "
 "Click Cancel to change the date / status. Otherwise, click OK to save."
-msgstr ""
+msgstr "Da li ste sigurni? Ovo je KOMPLETIRANA aktivnost sa datumom u BUDUĆNOSTI. Kliknite na Otkaži da promenite datum / status. U suprotnom, kliknite OK da sačuvate promene."
 
 #: CRM/Activity/Form/Activity.php
 msgid ""
 "Are you sure? This is a SCHEDULED activity with the DATE in the PAST. Click "
 "Cancel to change the date / status. Otherwise, click OK to save."
-msgstr ""
+msgstr "Da li ste sigurni? Ovo je ZAKAZANA aktivnost sa datumom u PROŠLOSTI. Kliknite na Otkaži da promenite datum / status. U suprotnom, kliknite OK da sačuvate promene."
 
 #: CRM/Activity/Form/Activity.php
 msgid "Activity Type is a required field"
@@ -1442,7 +1442,7 @@ msgid ""
 "The data columns in this import file appear to be different from the saved "
 "mapping. Please verify that you have selected the correct saved mapping "
 "before continuing."
-msgstr ""
+msgstr "Kolone za podatke u ovom fajlu za import su drugačije od sačuvanog mapiranja. Proverite da ste odabrali ispravno sačuvano mapiranje pre nego što nastavite."
 
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 #: CRM/Contact/Import/Form/Preview.php CRM/Core/Form.php
@@ -1478,7 +1478,7 @@ msgstr "Kontakt ID"
 
 #: CRM/Activity/Import/Form/MapField.php
 msgid "Missing required contact matching fields."
-msgstr ""
+msgstr "Nedostaju obavezna polja za upoređivanje sličnosti kontakata"
 
 #: CRM/Activity/Import/Form/MapField.php
 msgid "(Sum of all weights should be greater than or equal to threshold: %1)."
@@ -1499,7 +1499,7 @@ msgstr "Ime je obavezno da bi se sačuvalo mapiranje importa"
 
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/Import/Form/MapField.php
 msgid "Duplicate Import Mapping Name"
-msgstr ""
+msgstr "Duplikat imena za maprianje importa"
 
 #: CRM/Activity/Import/Form/Summary.php CRM/Contact/Import/Form/Summary.php
 msgid "These records have been updated with the imported data."
@@ -2068,7 +2068,7 @@ msgstr ""
 #: CRM/Contact/Form/Edit/CommunicationPreferences.php CRM/Core/OptionValue.php
 #: templates/CRM/Contact/Page/Inline/CommunicationPreferences.tpl
 msgid "Addressee"
-msgstr ""
+msgstr "Primalac"
 
 #: CRM/Contact/BAO/Query.php
 msgid "%1 is not a valid operator"
@@ -2257,11 +2257,11 @@ msgstr "Veza - neaktivna ili istekla"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Relationship - Permissioned"
-msgstr ""
+msgstr "Veza - sa dozvolama"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Relationship - Non-permissioned"
-msgstr ""
+msgstr "Veza - bez dozvola"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Relationship Ended on or After"
@@ -2417,7 +2417,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/Contact.php
 msgid "External Identifier"
-msgstr ""
+msgstr " "
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Sort Name"
@@ -2495,7 +2495,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Addressee ID"
-msgstr ""
+msgstr "ID primaoca"
 
 #: CRM/Contact/DAO/Contact.php
 msgid "Addressee Custom"
@@ -2828,7 +2828,7 @@ msgstr "Tip veze je aktivan"
 
 #: CRM/Contact/DAO/SavedSearch.php
 msgid "Submitted Form Values"
-msgstr ""
+msgstr "Vrednosti poslatog formulara"
 
 #: CRM/Contact/DAO/SavedSearch.php
 msgid "Where Clause"
@@ -2937,7 +2937,7 @@ msgstr "Snimi sa duplikatom domaćinstva"
 #: CRM/Custom/Form/Field.php CRM/Custom/Form/Option.php
 #: CRM/Price/Form/Field.php CRM/UF/Form/Field.php
 msgid "Save and New"
-msgstr ""
+msgstr "Snimi i otvori novi"
 
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/Merge.php
 #: CRM/Contact/Form/RelatedContact.php
@@ -3005,7 +3005,7 @@ msgstr ""
 msgid ""
 "%1 Current membership(s) for this contact have been set to 'Deceased' "
 "status."
-msgstr ""
+msgstr "%1 trenutno članstvo (članstva) za ovaj kontakt su podešena na status 'preminuo/la'."
 
 #: CRM/Contact/Form/CustomData.php
 msgid "The maximum record limit is reached"
@@ -3094,16 +3094,16 @@ msgstr "OD email adresa"
 msgid ""
 "Domain Email Address must use a valid email address format (e.g. "
 "'info@example.org')."
-msgstr ""
+msgstr "Email adresa domena mora koristiti važeći format email adrese (npr. 'info@example.org')."
 
 #: CRM/Contact/Form/Domain.php
 msgid "Double quotes are not allow in from name."
-msgstr ""
+msgstr "Dupli navodnici nisu dozvoljeni u OD imenu."
 
 #: CRM/Contact/Form/Domain.php
 msgid ""
 "Please enter a valid default FROM email address for system-generated emails."
-msgstr ""
+msgstr "Unesite važeću podrazumevanu OD email adresu za emailove koje generiše sistem."
 
 #: CRM/Contact/Form/Domain.php
 msgid ""
@@ -3309,13 +3309,13 @@ msgstr "Instant Messenger"
 #: templates/CRM/Custom/Page/Group.hlp
 #: CRM/Upgrade/Snapshot/V4p2/Price/DAO/Set.php
 msgid "Title"
-msgstr ""
+msgstr "Naslov"
 
 #: CRM/Contact/Form/Edit/Individual.php
 msgid ""
 "First Name and Last Name OR an email OR an OpenID in the Primary Location "
 "should be set."
-msgstr ""
+msgstr "Ime i prezime ILI email ILI OpenID na primarnoj lokaciji moraju biti podešeni."
 
 #: CRM/Contact/Form/Edit/Lock.php CRM/Contact/Form/Inline/Lock.php
 msgid "This record was modified by another user!"
@@ -20910,7 +20910,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Addressee Type"
-msgstr ""
+msgstr "Tip primaoca"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Autocomplete Contact Search"
@@ -23048,13 +23048,13 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Update Greetings and Addressees"
-msgstr ""
+msgstr "Ažuriranje pozdrava i primaoca"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Goes through contact records and updates email and postal greetings, or "
 "addressee value"
-msgstr ""
+msgstr "Prolazi zapise o kontaktima i ažurira email i poštanske pozdrave ili vrednosti za primaoce"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
