--- a/po/id_ID/pledge.po
+++ b/po/id_ID/pledge.po
@@ -4,13 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Fery Setiawan <gembelweb@gmail.com>, 2015
+# Justin Snyder <jsnyder83@gmail.com>, 2017
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-26 11:39+0000\n"
+"Last-Translator: Justin Snyder <jsnyder83@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -654,7 +655,7 @@ msgstr "Tidak ada janji yang direkam dari kontak ini."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "Contributions made in honor of %1"
-msgstr ""
+msgstr "Sumbangan diberikan atas nama %1"
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Payments"
@@ -778,48 +779,48 @@ msgstr "Pengingat Pembayaran Janji"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "First installment payment"
-msgstr ""
+msgstr "Pembayaran cicilan pertama"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid "Day of month installments paid"
-msgstr ""
+msgstr "Tanggal cicilan akan dibayar"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement Sent"
-msgstr ""
+msgstr "Pengakuan Janjian Telah Dikirim"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge Acknowledgement  Not Sent"
-msgstr ""
+msgstr "Pengakuan Janjian Belum Dirkirim"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Acknowledgement sent?"
-msgstr ""
+msgstr "Apakah pengakuan telah dikirim?"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter a number"
-msgstr ""
+msgstr "Silahkan masukin angka"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Please enter number."
-msgstr ""
+msgstr "Silahkan masukin angka."
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Pledge Block ID"
-msgstr ""
+msgstr "Pledge Block ID"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Expose Frequency Interval?"
-msgstr ""
+msgstr "Frekwensi terexpose?"
 
 #: CRM/Pledge/DAO/PledgeBlock.php
 msgid "Allow Edits to Recurring Donation Start Date?"
-msgstr ""
+msgstr "Apakah Tanggal Mulai Untuk Sumbangan Berulang Bisa Disunting?"
 
 #: CRM/Pledge/Task.php
 msgid "Export pledges"
-msgstr ""
+msgstr "Mengekspor janjian"
 
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Beginning Date"
-msgstr ""
+msgstr "Tanggal Mulai"
