--- a/po/lv_LV/countries.po
+++ b/po/lv_LV/countries.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # karlif <freibergs@jesuits.net>, 2014,2016
+# Sacrosanct <krisjanis.feldmans@gmail.com>, 2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-26 18:51+0000\n"
+"Last-Translator: Sacrosanct <krisjanis.feldmans@gmail.com>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1047,20 +1048,20 @@ msgstr "Senmartēna (Francijas daļa)"
 
 msgctxt "country"
 msgid "Virgin Islands,British"
-msgstr ""
+msgstr "Britu Virdžīnas"
 
 msgctxt "country"
 msgid "Côte d’Ivoire"
-msgstr ""
+msgstr "Kotdivuāra"
 
 msgctxt "country"
 msgid "Iran, Islamic Republic Of"
-msgstr ""
+msgstr "Irāna"
 
 msgctxt "country"
 msgid "Macedonia, Republic Of"
-msgstr ""
+msgstr "Maķedonija"
 
 msgctxt "country"
 msgid "Palestinian Territory"
-msgstr ""
+msgstr "Palestīna"
