po: update po/sr_RS@latin/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-25 20:12+0000\n"
+"PO-Revision-Date: 2017-01-26 17:08+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -854,7 +854,7 @@ msgstr ""
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Premium Information"
-msgstr ""
+msgstr "Informacije o premijumu"
 
 #: CRM/Contribute/Form/Contribution.php
 #: templates/CRM/Contribute/Form/Contribution.tpl
@@ -946,7 +946,7 @@ msgstr "Poruka za priznanicu"
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Please enter a valid list of comma delimited email addresses"
-msgstr ""
+msgstr "Unesite važeću listu email adresa razdvojenih zarezima"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 #: CRM/Report/Form/Instance.php
@@ -1273,7 +1273,7 @@ msgstr ""
 msgid ""
 "Check this box to require users who select the pay later option to provide "
 "billing name and address."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu kako biste tražili od korisnika koji se odluče za naknadno plaćanje da vam dostave ime i adresu za naplatu."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
@@ -1365,7 +1365,7 @@ msgstr "Limit za Recite prijatelju"
 msgid ""
 "How many recipients can they send emails to at one time? You may want to "
 "limit this to prevent large mail blasts from being sent."
-msgstr ""
+msgstr "Ka koliko primalaca email može biti poslat odjednom? Možete ograničiti ovo kako bi sprečili slanje velike količine mailova. "
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp
