--- a/po/lv_LV/admin.po
+++ b/po/lv_LV/admin.po
@@ -4,13 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # karlif <freibergs@jesuits.net>, 2014
-# Sacrosanct <krisjanis.feldmans@gmail.com>, 2014
+# Sacrosanct <krisjanis.feldmans@gmail.com>, 2014,2017
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:43+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-26 18:49+0000\n"
+"Last-Translator: Sacrosanct <krisjanis.feldmans@gmail.com>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,15 +52,15 @@ msgstr ""
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Unsupported action"
-msgstr ""
+msgstr "Neatbalstīta darbība"
 
 #: CRM/Admin/Form/Extensions.php CRM/Admin/Page/Extensions.php
 msgid "Install"
-msgstr ""
+msgstr "Uzstādīt"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Install \"%1\"?"
-msgstr ""
+msgstr "Uzstādīt \"%1\"?"
 
 #: CRM/Admin/Form/Extensions.php
 msgid "Download and Install"
@@ -290,7 +290,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Mail Setting Deleted."
-msgstr ""
+msgstr "E-pasta iestatījumi dzēsti."
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Your New  Email Settings have been saved."
@@ -302,7 +302,7 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Changes Not Saved."
-msgstr ""
+msgstr "Izmaiņas netika saglabātas."
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
@@ -485,7 +485,7 @@ msgstr ""
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "Enter a positive integer"
-msgstr ""
+msgstr "Ievadiet pozitīvu, veselu skaitli "
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 msgid "User Name Label"
