po: update po/lv_LV/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/lv_LV/member.po
+++ b/po/lv_LV/member.po
@@ -4,14 +4,14 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # karlif <freibergs@jesuits.net>, 2014
-# Sacrosanct <krisjanis.feldmans@gmail.com>, 2014
-# Vladimirs Kuzmins <vladimirs.kuzmins@rixtar.com>, 2013
+# Sacrosanct <krisjanis.feldmans@gmail.com>, 2014,2017
+# Vladimirs Kuzmins, 2013
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:42+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2017-01-26 18:53+0000\n"
+"Last-Translator: Sacrosanct <krisjanis.feldmans@gmail.com>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -46,7 +46,7 @@ msgstr ""
 
 #: CRM/Member/BAO/Membership.php
 msgid "do not import"
-msgstr "ne importēt"
+msgstr "neimportēt"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Membership Fields"
@@ -149,11 +149,11 @@ msgstr ""
 
 #: CRM/Member/BAO/Query.php
 msgid "Primary Member?"
-msgstr ""
+msgstr "Primārais biedrs?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Pay Later?"
-msgstr ""
+msgstr "Maksāt vēlāk?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew?"
@@ -237,7 +237,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Is Required"
-msgstr ""
+msgstr "Ir nepieciešams"
 
 #: CRM/Member/DAO/MembershipLog.php
 msgid "Membership Change Date"
