--- a/po/sr_RS@latin/common-components.po
+++ b/po/sr_RS@latin/common-components.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-26 17:08+0000\n"
+"PO-Revision-Date: 2017-01-27 08:12+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1586,7 +1586,7 @@ msgstr ""
 msgid ""
 "Check this box if the first row of your file consists of field names "
 "(Example: 'Contact ID', 'Amount')."
-msgstr ""
+msgstr "Štiklirajte ovu kućicu ukoliko prvi red u vašem fajlu sadrži nazive polja (Primer: 'ID kontakta', 'Iznos')."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 #: templates/CRM/Event/Import/Form/Summary.tpl
@@ -1888,7 +1888,7 @@ msgstr "Ovo članstvo će biti automatski obnovlljeno. Automatsko obnavljanje mo
 msgid ""
 "You can update billing details for this automatically renewed membership by "
 "<a href=\"%1\">visiting this web page</a>."
-msgstr ""
+msgstr "Možete ažurirati ovo automatski osveženo članstvo tako što ćete posetiti <a href=\"%1\">ovu veb stranu</a>."
 
 #: CRM/Event/DAO/Event.php CRM/Event/Form/ManageEvent/Fee.php
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
