po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-01-25 21:30+0000\n"
+"PO-Revision-Date: 2017-01-27 14:58+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -576,39 +576,39 @@ msgstr "Url - Naslovna"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Title"
-msgstr ""
+msgstr "Boja naslova"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Button"
-msgstr ""
+msgstr "Boja dugmeta"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Bar"
-msgstr ""
+msgstr "Boja trake"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Main Text"
-msgstr ""
+msgstr "Boja glavnog teksta"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Main"
-msgstr ""
+msgstr "Boja glavna"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Main Bg"
-msgstr ""
+msgstr "Boja pozadine glavne stranice"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Bg"
-msgstr ""
+msgstr "Boja pozadine"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color About Link"
-msgstr ""
+msgstr "Boja linka O nama"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Homepage Link"
-msgstr ""
+msgstr "Boja linka za naslovnu"
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid ""
@@ -1504,39 +1504,39 @@ msgstr "Doniraj!"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Title Text Color"
-msgstr ""
+msgstr "Boja teksta za naslov"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Progress Bar Color"
-msgstr ""
+msgstr "Boja trake za progres"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Additional Text Color"
-msgstr ""
+msgstr "Boja dodatnog teksta"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Background Color"
-msgstr ""
+msgstr "Boja pozadine"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Background Color Top Area"
-msgstr ""
+msgstr "Boja pozadine gornjeg dela strane"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Border Color"
-msgstr ""
+msgstr "Boja ivica"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Button Text Color"
-msgstr ""
+msgstr "Boja teksta za dugme"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Button Background Color"
-msgstr ""
+msgstr "Boja pozadine za dugme"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Homepage Link Color"
-msgstr ""
+msgstr "Boja linka za naslovnu"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Enable Widget?"
@@ -1958,7 +1958,7 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
 "Transaction ID's must be unique. Include the account number for checks."
-msgstr ""
+msgstr "ID transakcija moraju biti unikatni. Uključite broj računa za čekove."
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
@@ -1967,7 +1967,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid "Contribution status has been updated for selected record(s)."
-msgstr ""
+msgstr "Status donacije je ažuriran za odabrani zapis(zapise)."
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid "Status Updated"
@@ -2014,11 +2014,11 @@ msgstr "Nemate dozvolu za ažuriranje pretplate."
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Amount"
-msgstr ""
+msgstr "Iznos periodične donacije"
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Could not update the Recurring contribution details"
-msgstr ""
+msgstr "Nemoguće je ažurirati detalje periodične donacije"
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid ""
@@ -2044,7 +2044,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/UpdateSubscription.php
 msgid "Recurring Contribution Updated"
-msgstr ""
+msgstr "Periodična donacija ažurirana"
 
 #: CRM/Contribute/Import/Form/DataSource.php
 msgid "Insert new contributions"
@@ -2056,7 +2056,7 @@ msgstr "Ažuriraj postojeće donacije"
 
 #: CRM/Contribute/Import/Form/DataSource.php
 msgid "Load Mapping"
-msgstr ""
+msgstr "Učitaj mapiranje"
 
 #: CRM/Contribute/Import/Form/MapField.php
 msgid "Missing required fields: Soft Credit"
@@ -2178,7 +2178,7 @@ msgstr "Uspešno kopiranje"
 msgid ""
 "The '%1' cannot be deleted! You must Delete all Personal Campaign Page(s) "
 "related with this contribution page prior to deleting the page."
-msgstr ""
+msgstr "'%1' ne može biti obrisan. Morate obrisati stranicu lične kampanje (ili stranice) povezane sa ovom stranicom za doniranje pre brisanja strane."
 
 #: CRM/Contribute/Page/ContributionPage.php
 msgid "Links"
@@ -2285,7 +2285,7 @@ msgstr "UPOZORENJE: Ukoliko obrišete ovu opciju, donatori neće moći da korist
 msgid ""
 "The name for this credit card type as it should be provided to your payment "
 "processor."
-msgstr ""
+msgstr "Ime za ovaj tip kreditne kartice kako će biti dostavljeno vašem procesoru uplata."
 
 #: templates/CRM/Contribute/Form/AcceptCreditCard.tpl
 msgid ""
@@ -2369,7 +2369,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Due"
-msgstr ""
+msgstr "Datum refundiranja"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Details"
@@ -2396,13 +2396,13 @@ msgstr "Unesite poruku koja će se nalaziti na početku emaila sa potvrdom. "
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Net value of the payment (Total Amount minus Fee)."
-msgstr ""
+msgstr "Neto iznos uplate (Ukupno minus provizija)"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid ""
 "Click OK to save this payment record AND send a receipt to the contributor "
 "now"
-msgstr ""
+msgstr "Kliknite OK da sačuvate zapis o ovoj uplati i pošaljete priznanicu donatoru odmah"
 
 #: templates/CRM/Contribute/Form/CancelSubscription.tpl
 #: templates/CRM/Contribute/Form/UpdateBilling.tpl
@@ -2426,25 +2426,25 @@ msgid ""
 "Automatic cancellation is not supported for this payment processor. You or "
 "the contributor will need to manually cancel this recurring contribution "
 "using the payment processor website."
-msgstr ""
+msgstr "Ovaj procesor uplata ne podržava automatsko otkazivanje. Vi ili donator morate ručno da otkažete ovu periodičnu donaciju na vebsajtu ovog procesora uplate."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
 "Please verify the information below carefully. Click <strong>Go "
 "Back</strong> if you need to make changes."
-msgstr ""
+msgstr "Pažljivo proverite informacije koje se nalaze ispod. Kliknite ispod na dugme <strong>Nazad</strong> ukoliko je potrebno da nešto izmenite. "
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
 "Click the <strong>Google Checkout</strong> button to checkout to Google, "
 "where you will select your payment method and complete the contribution."
-msgstr ""
+msgstr "Klikom na <strong>%1</strong> bićete prebačeni na Google, gde ćete odabrati vaš metod plaćanja i završiti sa doniranjem."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
 "Click the <strong>%2</strong> button to go to %1, where you will select your"
 " payment method and complete the contribution."
-msgstr ""
+msgstr "Klikom na <strong>%2</strong> dugme bićete prebačeni na %1, gde ćete izabrati vaš metod plaćanja i završiti sa donacijom."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
@@ -2524,7 +2524,7 @@ msgstr "Email organizacije"
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Agreement"
-msgstr ""
+msgstr "Dogovor"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
@@ -2538,13 +2538,13 @@ msgstr ""
 msgid ""
 "Your transaction will not be completed until you click the "
 "<strong>%1</strong> button. Please click the button one time only."
-msgstr ""
+msgstr "Vaša transakcija neće biti završena dok ne kliknete na dugme <strong>%1</strong>. Na dugme kliknite samo jednom."
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 msgid ""
 "Your contribution will not be completed until you click the "
 "<strong>%1</strong> button. Please click the button one time only."
-msgstr ""
+msgstr "Vaša donacija neće biti završena dok ne kliknete na dugme <strong>%1</strong>. Na dugme kliknite samo jednom."
 
 #: templates/CRM/Contribute/Form/Contribution/Main.tpl
 msgid "Click here to do this for a different person."
@@ -2599,7 +2599,7 @@ msgstr "Vaše članstvo u <strong>%2</strong> ne ističe(ne morate obnavljati ov
 
 #: templates/CRM/Contribute/Form/Contribution/MembershipBlock.tpl
 msgid "Select a Membership Renewal Level"
-msgstr ""
+msgstr "Izaberite nivo obnove članstva"
 
 #: templates/CRM/Contribute/Form/Contribution/MembershipBlock.tpl
 msgid "Select a Membership Level"
@@ -2613,7 +2613,7 @@ msgstr "(donirajte barem %1 da bi ste se kvalifikovali za ovo članstvo)"
 msgid ""
 "Organization details have been prefilled for you. If this is not the "
 "organization you want to use, click \"Enter a new organization\" above."
-msgstr ""
+msgstr "Detalji organizacije su već popunjeni za vas. Ukoliko ovo nije vaša organizacija, kliknite na \"Unesi novu organizaciju\" iznad."
 
 #: templates/CRM/Contribute/Form/Contribution/OnBehalfOf.tpl
 msgid "Use existing organization"
@@ -2641,7 +2641,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution/PreviewHeader.tpl
 msgid "Test-drive Your Contribution Page"
-msgstr ""
+msgstr "Testirajte vašu stranicu za donacije"
 
 #: templates/CRM/Contribute/Form/Contribution/PreviewHeader.tpl
 msgid ""
@@ -2747,7 +2747,7 @@ msgstr ""
 msgid ""
 "You will receive an email receipt which includes information about how to "
 "update or cancel this recurring contribution."
-msgstr ""
+msgstr "Dobićete email priznanicu sa informacijama o tome kako da ažurirate ili otkažete ovu periodičnu donaciju."
 
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
 msgid ""
@@ -2798,11 +2798,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "submit credit card contribution"
-msgstr ""
+msgstr "Pošalji donaciju kreditnom karticom"
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "<a href='#' onclick='adjustPayment();'>adjust payment amount</a>"
-msgstr ""
+msgstr "<a href='#' onclick='adjustPayment();'>podesi iznos uplate</a>"
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
@@ -2847,7 +2847,7 @@ msgstr ""
 msgid ""
 "Search for the Personal Campaign Page by the fund-raiser's last name or "
 "email address."
-msgstr ""
+msgstr "Pretražite stranice lične kampanje po prezimenu ili emailu fandrejzera."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
@@ -2899,11 +2899,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/ContributionPage/AddProduct.tpl
 msgid "Add Products to This Page"
-msgstr ""
+msgstr "Dodaj proizvode na ovu stranicu"
 
 #: templates/CRM/Contribute/Form/ContributionPage/AddProduct.tpl
 msgid "Remove Products from this Page"
-msgstr ""
+msgstr "Ukloni proizvode sa ove stranice"
 
 #: templates/CRM/Contribute/Form/ContributionPage/AddProduct.tpl
 msgid ""
